# sopel-reddit

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_reddit/: __init__.py  plugin.py
tests/: test_url_matching.py
